--- a/.github/workflows/test_package_management_scripts.yaml
+++ b/.github/workflows/test_package_management_scripts.yaml
@@ -14,7 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 3.6
+    - uses: actions/setup-python@v2
+      with:
+        python-version: 2.7
     - name: Init submodules
       run: git submodule update --init --recursive
 
