Rename google cloud trigger for python3-ds-EXASOL-6.1.0 to python3.6-ds-EXASOL-6.2.0

--- a/google-cloud-build/triggers/flavor-config/build_branch/python3.6-ds-cuda-preview-EXASOL-6.2.0.yaml
+++ b/google-cloud-build/triggers/flavor-config/build_branch/python3.6-ds-cuda-preview-EXASOL-6.2.0.yaml
@@ -1,4 +1,4 @@
-flavor: "python3-ds-cuda-preview-EXASOL-6.1.0"
+flavor: "python3.6-ds-cuda-preview-EXASOL-6.2.0"
 trigger_template_file: "build_branch.json.jinja2"
 build_mode: "build"
 disabled: false
