--- a/google-cloud-build/triggers/flavor-config/build_pull_request/python3.6-ds-EXASOL-6.2.0.yaml
+++ b/google-cloud-build/triggers/flavor-config/build_pull_request/python3.6-ds-EXASOL-6.2.0.yaml
@@ -1,3 +1,3 @@
-flavor: "python3-ds-cuda-preview-EXASOL-6.1.0"
+flavor: "python3.6-ds-EXASOL-6.2.0"
 trigger_template_file: "build_pull_request.json.jinja2"
 disabled: false
