--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
@@ -16,7 +16,7 @@ RUN apt-get update && \
     ldconfig
 
 COPY scripts /scripts
-RUN /scripts/install_scripts/install_python3.6_pip.sh
+RUN /scripts/install_scripts/install_python3_pip.sh
 
 COPY scripts /scripts
 COPY language_deps/packages/pip3_packages /build_info/packages/language_deps
