--- a/google-cloud-build/triggers/flavor-config/rebuild_branch/python-3.6-data-science-cuda-EXASOL-6.2.0.yaml
+++ b/google-cloud-build/triggers/flavor-config/rebuild_branch/python-3.6-data-science-cuda-EXASOL-6.2.0.yaml
@@ -1,3 +1,3 @@
-flavor: "python3-ds-cuda-preview-EXASOL-6.1.0"
+flavor: "python-3.6-data-science-cuda-EXASOL-6.2.0"
 trigger_template_file: "build_branch.json.jinja2"
 build_mode: "rebuild"
