--- a/.github/workflows/test_package_management_scripts.yaml
+++ b/.github/workflows/test_package_management_scripts.yaml
@@ -9,7 +9,7 @@ on:
       - "*"
 
 jobs:
-  build:
+  test_package_management_scripts:
     runs-on: ubuntu-latest
 
     steps:
@@ -23,9 +23,14 @@ jobs:
     - name: Init submodules
       run: git submodule update --init --recursive
 
-    - name: Test install scripts
+    - name: Test install scripts dry-run
       run: bash run_tests.sh 
       working-directory: ext/scripts/tests/install_scripts
+
+
+    - name: Test install scripts in docker container
+      run: bash test_scripts_in_docker.sh 
+      working-directory: ext/scripts/tests/
 
     - name: Test list installed scripts
       run: bash run_tests.sh 
