--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/build_run/Dockerfile
@@ -1,11 +1,95 @@
 FROM {{language_deps}}
 
 COPY --from={{build_deps}} /usr /usr
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 COPY --from={{build_deps}} /lib /lib
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 COPY --from={{build_deps}} /bin /bin
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 COPY --from={{build_deps}} /opt /opt
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 COPY --from={{build_deps}} /etc /etc
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 COPY --from={{build_deps}} /env /env
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 
 RUN ldconfig
 
@@ -23,5 +107,19 @@ WORKDIR /exaudf
 RUN rm -r /exaudfclient
 
 COPY --from={{build_deps}} /build_info /build_info
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
+RUN true # workaround for https://github.com/moby/moby/issues/37965
+
 
 RUN mkdir /conf /buckets
