--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/flavor_base_deps/Dockerfile
@@ -1,6 +1,6 @@
 FROM {{ language_deps }}
 
-RUN mkdir -p /build_info/packages
+RUN mkdir -p /build_info/packages/flavor_base_deps
 COPY flavor_base_deps/packages/apt_get_packages /build_info/packages/flavor_base_deps
 
 RUN apt-get -y update && \
