#233: Add script to generate package diffs between releases (#205)
- Add script to generate package diffs between releases
- Unify package list names and formats
- Replace manual apt-get installation with install script in python-3.6-data-science-cuda-EXASOL-6.2.0 flavor, except for cuda_deps

Related to https://github.com/exasol/script-languages-release/issues/233

--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
@@ -1,26 +1,14 @@
 FROM {{udfclient_deps}}
 
 RUN mkdir -p /build_info/packages/language_deps
+
 COPY language_deps/packages/apt_get_packages /build_info/packages/language_deps
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/language_deps/apt_get_packages --with-versions --allow-no-version
 
-# ppa:deadsnakes/ppa needed for python3.6 under ubuntu:16.04
-RUN apt-get update && \
-    apt-get -y install software-properties-common && \
-    add-apt-repository ppa:deadsnakes/ppa && \
-    apt-get -y update && \
-    apt-get -y install $(cat /build_info/packages/language_deps/apt_get_packages) && \
-    locale-gen en_US.UTF-8 && \
-    update-locale LC_ALL=en_US.UTF-8 && \
-    apt-get -y clean && \
-    apt-get -y autoremove && \
-    ldconfig
-
-COPY scripts /scripts
 RUN /scripts/install_scripts/install_python3.6_pip.sh
 
-COPY scripts /scripts
-COPY language_deps/packages/pip3_packages /build_info/packages/language_deps
-RUN /scripts/install_scripts/install_packages_batch.sh "PYTHON3-PIP" "pip install --ignore-installed <<list>>" "<<package>>" " " /build_info/packages/language_deps/pip3_packages
+COPY language_deps/packages/python3_pip_packages /build_info/packages/language_deps
+RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/language_deps/python3_pip_packages --python-binary python3 --with-versions --allow-no-version
 
 ENV PYTHON3_PREFIX /usr
 ENV PYTHON3_VERSION python3.6
