--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -42,6 +42,7 @@ cc_library(
     alwayslink=True,
 )
 
+
 # A collection target for the case that language container want to include all public headers of exaudflib
 cc_library(
     name = "header",
@@ -90,7 +91,8 @@ cc_library(
 # depend directly on them
 cc_library(
     name = "exaudflib",
-    srcs = ["exaudflib.cc"],
+    srcs = ["exaudflib.cc", "impl/exaudflib_check.cc"],
+    hdrs = ["impl/exaudflib_check.h"],
     linkstatic = 1,
     alwayslink = True,
     defines = VM_ENABLED_DEFINES,
