--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/language_deps/Dockerfile
@@ -3,7 +3,7 @@ FROM {{udfclient_deps}}
 RUN mkdir -p /build_info/packages/language_deps
 
 COPY language_deps/packages/apt_get_packages /build_info/packages/language_deps
-RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/language_deps/apt_get_packages --with-versions --allow-no-version
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/language_deps/apt_get_packages --with-versions
 
 RUN /scripts/install_scripts/install_python3.6_pip.sh
 
