Split up Swig classes

--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -96,7 +96,11 @@ cc_library(
             "impl/exaudflib_check.cc", "impl/exaudflib_check.h",
             "impl/exaudflib_socket_low_level.cc", "impl/exaudflib_socket_low_level.h",
             "impl/exaudflib_global.cc", "impl/exaudflib_global.h",
-            "impl/exaudflib_socket_high_level.cc"],
+            "impl/exaudflib_socket_high_level.cc",
+            "impl/swig/swig_table_iterator.h", "impl/swig/swig_table_iterator.cc",
+            "impl/swig/swig_meta_data.h", "impl/swig/swig_meta_data.cc",
+            "impl/swig/swig_result_handler.h", "impl/swig/swig_result_handler.cc",
+            "impl/swig/swig_general_iterator.h", "impl/swig/swig_general_iterator.cc"],
     hdrs = ["exaudflib.h"],
     linkstatic = 1,
     alwayslink = True,
