--- a/exaudfclient/base/exaudflib/BUILD
+++ b/exaudfclient/base/exaudflib/BUILD
@@ -92,11 +92,12 @@ cc_library(
 cc_library(
     name = "exaudflib",
     srcs = ["exaudflib.cc",
-            "impl/exaudflib_msg_conversion.cc", "impl/exaudflib_msg_conversion.h",
-            "impl/exaudflib_check.cc", "impl/exaudflib_check.h",
-            "impl/exaudflib_socket_low_level.cc", "impl/exaudflib_socket_low_level.h",
-            "impl/exaudflib_global.cc", "impl/exaudflib_global.h",
-            "impl/exaudflib_socket_high_level.cc",
+            "impl/msg_conversion.cc", "impl/msg_conversion.h",
+            "impl/check.cc", "impl/check.h",
+            "impl/socket_info.cc", "impl/socket_info.h",
+            "impl/socket_low_level.cc", "impl/socket_low_level.h",
+            "impl/global.cc", "impl/global.h",
+            "impl/socket_high_level.cc",
             "impl/swig/swig_table_iterator.h", "impl/swig/swig_table_iterator.cc",
             "impl/swig/swig_meta_data.h", "impl/swig/swig_meta_data.cc",
             "impl/swig/swig_result_handler.h", "impl/swig/swig_result_handler.cc",
