--- a/google-cloud-build/triggers/flavor-config/release_debug.yaml
+++ b/google-cloud-build/triggers/flavor-config/release_debug.yaml
@@ -1,3 +1,3 @@
-flavors: "python-3.6-data-science-EXASOL-6.2.0 python-3.6-data-science-cuda-EXASOL-6.2.0 python-3.6-minimal-EXASOL-6.2.0"
+flavors: "python-3.6-data-science-EXASOL-6.2.0 python-3.6-data-science-cuda-EXASOL-6.2.0 python-3.6-minimal-EXASOL-6.2.0 python-3.7-minimal-EXASOL-6.2.0"
 trigger_template_file: "release.json.jinja2"
 debug: true
