#341: new tests for linkernamespace (#214)
1. Created a test which checks that protobuf and zmq are not part of the global linker namespace
2. Created a second test which checks the correctness of the first test:
   a) Created new test binaries which have a static link dependency to protobuf and zmq
   b) Run the same test as 1) against these binaries and expect that protobuf and zmq are part of the global linker namespace

--- a/exaudfclient/base/.bazelrc
+++ b/exaudfclient/base/.bazelrc
@@ -8,7 +8,13 @@ build:fast-binary-py3 --copt='-DCUSTOM_LIBEXAUDFLIB_PATH="/exaudf/libexaudflib_c
 build:fast-binary-both --config=fast-binary-py2 --config=fast-binary-py3
 build:slow-wrapper-py2 --define binary_type=slow_wrapper //:exaudfclient
 build:slow-wrapper-py3 --define binary_type=slow_wrapper //:exaudfclient_py3
-build:slow-wrapper-both --config=slow-wrapper-py2 --config=slow-wrapper-py3 
+build:slow-wrapper-both --config=slow-wrapper-py2 --config=slow-wrapper-py3
+build:static-binary-py3 //:exaudfclient_py3_static
+build:static-binary-py2 //:exaudfclient_py2_static
+build:static-binary-both --config=static-binary-py3 --config=static-binary-py2
+build:test-binaries-py3 --config=static-binary-py3 --config=slow-wrapper-py3
+build:test-binaries-py2 --config=static-binary-py2 --config=slow-wrapper-py2
+build:test-binaries-both --config=test-binaries-py2 --config=test-binaries-py3
 build:verbose --copt='-v' --subcommands --verbose_failures --announce_rc
 #TODO test linkopts="-flto"
 build:optimize --copt="-g0" --copt="-DNDEBUG" --copt=-fstack-protector-strong --copt=-fomit-frame-pointer --copt=-ffunction-sections --copt=-fdata-sections --copt="-O3" --copt="-U_FORTIFY_SOURCE" --copt="-flto"
