--- a/exaudfclient/base/BUILD
+++ b/exaudfclient/base/BUILD
@@ -125,6 +125,39 @@ cc_binary(
     data = [":libexaudflib_complete.so"]
 )
 
+## The purpose of the static binaries is to verify if the linker namespace test work correctly.
+## It is crucial that all linker symbols of exaudflib and all it's dependency are loaded into a new linker namespace,
+## so that the user can load it's own versions of those dependencies without any conflict.
+## With this binary we simulate an error in our build system, that is a direct depedency to protobuf/zmq,
+## which then must be detected with the linker namespace tests:
+## test/linker-namespace-sanity/linker_namespace_sanity.py checks the wrong configuration
+## Besides this the test under test/python3/all/linker_namespace.py checks the normal build, which expects
+## not to find any occurence of the dependencies (protobuf/zmq) in the primary linker namespace.
+##
+## We need to explicitly declare the dependency of protobuf/zmq here, as the exaudflib is a static lib (//exaudflib:exaudflib)
+## and hence does not contain dependency information. We cannot declare the shared lib (:exaudflib_complete.so)
+## as dependency as it is a binary for bazel.
+
+cc_binary(
+    name = "exaudfclient_py2_static_bin",
+    srcs = ["exaudfclient.cc"],
+    linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
+    deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON2_DEPS+
+          ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+    defines = VM_ENABLED_DEFINES,
+    data = [":libexaudflib_complete.so"],
+)
+
+cc_binary(
+    name = "exaudfclient_py3_static_bin",
+    srcs = ["exaudfclient.cc"],
+    linkopts = ["-ldl"], # needed for dynamicly loading libexaudflib_complete.so into another linker namespace
+    deps = ["//exaudflib:header", "//:debug_message_h"]+VM_ENABLED_DEPS+VM_PYTHON3_DEPS+
+            ["//exaudflib:exaudflib-deps"] + [ "@zmq//:zmqlib", "@protobuf//:protobuf"],
+    defines = VM_ENABLED_DEFINES,
+    data = [":libexaudflib_complete.so"],
+)
+
 # Workarround for the hardcoded paths in exaudfclient for libexaudflib_complete.so and python_ext_dataframe.cc
 # - libexaudflib_complete.so and python_ext_dataframe.cc get dynamically loaded, therefore the exaudfclient needs to know their paths
 # - Most flexible way to provides these paths would environment variables
@@ -172,3 +205,36 @@ genrule(
     srcs = [":exaudfclient_py3_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
     output_to_bindir = True
 )
+
+SLOW_WRAPPER_STATIC_BINARY_PY2="""$(location //:wrapper_generator_bin) "$(location exaudfclient_py2_static_bin)" "$(location exaudfclient_py2_static)" "$(location exaudfclient.template.sh)" """
+FAST_BINARY_STATIC_PY2="""cp "$(location exaudfclient_py2_static_bin)" "$(location exaudfclient_py2_static)" """
+CREATE_STATIC_BINARY_PY2_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_STATIC_PY2,
+        "//:slow_wrapper": SLOW_WRAPPER_STATIC_BINARY_PY2,
+        "//conditions:default": FAST_BINARY_STATIC_PY2
+    })
+
+genrule(
+    name = "exaudfclient_py2_static",
+    cmd = CREATE_STATIC_BINARY_PY2_SCRIPT,
+    outs = ["exaudfclient_py2_static"],
+    srcs = [":exaudfclient_py2_static_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
+    output_to_bindir = True
+)
+
+SLOW_WRAPPER_STATIC_BINARY_PY3="""$(location //:wrapper_generator_bin) "$(location exaudfclient_py3_static_bin)" "$(location exaudfclient_py3_static)" "$(location exaudfclient.template.sh)" """
+FAST_BINARY_STATIC_PY3="""cp "$(location exaudfclient_py3_static_bin)" "$(location exaudfclient_py3_static)" """
+CREATE_STATIC_BINARY_PY3_SCRIPT=select({
+        "//:fast_binary": FAST_BINARY_STATIC_PY3,
+        "//:slow_wrapper": SLOW_WRAPPER_STATIC_BINARY_PY3,
+        "//conditions:default": FAST_BINARY_STATIC_PY3
+    })
+
+genrule(
+    name = "exaudfclient_py3_static",
+    cmd = CREATE_STATIC_BINARY_PY3_SCRIPT,
+    outs = ["exaudfclient_py3_static"],
+    srcs = [":exaudfclient_py3_static_bin", "//:libexaudflib_complete.so", "exaudfclient.template.sh", "//:wrapper_generator_bin"],
+    output_to_bindir = True
+)
+
