#224 Use exasol python test framework package

--- a/tests/Dockerfile
+++ b/tests/Dockerfile
@@ -6,11 +6,12 @@ RUN apt-get -y update && \
     apt-get -y install \
         openjdk-11-jdk \
         locales \
-        python \
-        python-pip \
+        python3 \
+        python3-pip \
         unixodbc \
         unixodbc-dev \
-        curl && \
+        curl \
+        git && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
@@ -28,4 +29,4 @@ ENV EXAPLUS=/downloads/EXAplus/exaplus
 RUN curl -s -o udf_debug.py https://raw.githubusercontent.com/exasol/hadoop-etl-udfs/master/tools/udf_debug.py
 
 COPY requirements.txt requirements.txt
-RUN pip install -r "requirements.txt"
+RUN pip3 install -r "requirements.txt"
