--- a/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/udfclient_deps/Dockerfile
+++ b/flavors/python-3.6-data-science-cuda-EXASOL-6.2.0/flavor_base/udfclient_deps/Dockerfile
@@ -5,13 +5,11 @@ ENV ARCHIVE_UBUNTU_PREFIX=""
 RUN sed --in-place --regexp-extended "s/(\/\/)(archive\.ubuntu)/\1$ARCHIVE_UBUNTU_PREFIX\2/" /etc/apt/sources.list
 
 COPY 01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc
-
 COPY scripts /scripts
 
 RUN mkdir -p /build_info/packages
 COPY udfclient_deps/packages /build_info/packages/udfclient_deps
-
-RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/udfclient_deps/apt_get_packages
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/udfclient_deps/apt_get_packages --with-versions
 
 RUN addgroup --gid 1000 exasolution
 RUN adduser --disabled-login --uid 1000 --gid 1000 exasolution --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
