--- a/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/base_test_deps/Dockerfile
+++ b/flavors/python-3.6-minimal-EXASOL-6.2.0/flavor_base/base_test_deps/Dockerfile
@@ -3,4 +3,4 @@ FROM {{build_deps}}
 RUN mkdir -p /build_info/packages
 COPY base_test_deps/packages /build_info/packages/base_test_deps
 
-RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/base_test_deps/apt_get_packages
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/base_test_deps/apt_get_packages --with-versions
