--- a/flavors/python-3.7-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
+++ b/flavors/python-3.7-minimal-EXASOL-6.2.0/flavor_customization/Dockerfile
@@ -17,7 +17,7 @@ FROM {{flavor_base_deps}}
 RUN mkdir -p /build_info/packages/flavor_customization
 
 COPY flavor_customization/packages/apt_get_packages /build_info/packages/flavor_customization
-RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/flavor_customization/apt_get_packages --with-versions --allow-no-version
+RUN /scripts/install_scripts/install_via_apt.pl --file /build_info/packages/flavor_customization/apt_get_packages --with-versions
 
 COPY flavor_customization/packages/python3_pip_packages /build_info/packages/flavor_customization
 RUN /scripts/install_scripts/install_via_pip.pl --file /build_info/packages/flavor_customization/python3_pip_packages --python-binary python3.7 --with-versions --allow-no-version
