Moved python_vm.h to python container and renamed to pythoncontainer.h

--- a/exaudfclient/base/python/python2/BUILD
+++ b/exaudfclient/base/python/python2/BUILD
@@ -87,9 +87,9 @@ cc_library(
 
 cc_library(
     name = "pythoncontainer",
-    srcs = ["//python:pythoncontainer.cc"],
+    srcs = ["//python:pythoncontainer.cc", "//python:pythoncontainer.h",],
     data = [":extend_exascript_python_preset_py"], 
-    hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
+    hdrs = [":pythoncontainer.h", ":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
     deps = ["@python2//:python2",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"],
     alwayslink=True,
