--- a/exaudfclient/base/python/python3/BUILD
+++ b/exaudfclient/base/python/python3/BUILD
@@ -87,9 +87,9 @@ cc_library(
 
 cc_library(
     name = "pythoncontainer",
-    srcs = ["//python:pythoncontainer.cc",":dummy.h"],
+    srcs = ["//python:pythoncontainer.cc", "//python:pythoncontainer.h", ":dummy.h"],
     data = [":extend_exascript_python_preset_py"], 
-    hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
+    hdrs = ["//python:pythoncontainer.h", ":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
     deps = ["@python3//:python3",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"],
     alwayslink=True,
