--- a/exaudfclient/base/python/BUILD
+++ b/exaudfclient/base/python/BUILD
@@ -3,6 +3,10 @@ exports_files([
     "exascript_python_preset_core.py",
     "exascript_python_wrap.py",
     "extend_exascript_python_preset_py.sh",
-    "pythoncontainer.cc",
-    "pythoncontainer.h"
+    "pythoncontainer.cc"
     ])
+
+cc_library(
+    name = "pythoncontainer_header",
+    hdrs = ["pythoncontainer.h"]
+)
