--- a/exaudfclient/base/python/python3/BUILD
+++ b/exaudfclient/base/python/python3/BUILD
@@ -87,11 +87,12 @@ cc_library(
 
 cc_library(
     name = "pythoncontainer",
-    srcs = ["//python:pythoncontainer.cc", "//python:pythoncontainer.h", ":dummy.h"],
+    srcs = ["//python:pythoncontainer.cc", ":dummy.h"],
     data = [":extend_exascript_python_preset_py"], 
-    hdrs = ["//python:pythoncontainer.h", ":exascript_python_int", ":filter_swig_code_exascript_python_h"],
+    hdrs = [":exascript_python_int", ":filter_swig_code_exascript_python_h"],
     include_prefix = ".",
-    deps = ["@python3//:python3",":exascript_python","//exaudflib:header", "//:debug_message_h","//exaudflib:scriptoptionlines"],
+    deps = ["@python3//:python3",":exascript_python","//exaudflib:header",
+            "//:debug_message_h","//exaudflib:scriptoptionlines", "//python:pythoncontainer_header"],
     alwayslink=True,
 )
 
